--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Udemy React app</title>
+    <title>React Timer</title>
     <link rel="stylesheet" href="index.css"/>
   </head>
   <body>
